--- a/ullet/src/assets/global.css
+++ b/ullet/src/assets/global.css
@@ -7,3 +7,9 @@
     padding: 0;
     outline: none;
 }
+
+.flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
