--- a/ullet/src/components/forms/forms.css
+++ b/ullet/src/components/forms/forms.css
@@ -1,9 +1,14 @@
 .button,
 .wire-button {
+    font-weight: bold;
+
     border: none;
     background-color: #CA2728;
-    border-radius: 2rem;
-    padding: 0.5rem 2.5rem 0.5rem 2.5rem;
+    border-radius: var(--default-border-radius);
+    padding: 0.5rem 2.5rem;
+    cursor: pointer;
+
+    transition: 0.2s;
 }
 
 .button b {
@@ -11,20 +16,31 @@
 }
 
 .wire-button {
-    background-color: transparent;
-    border: solid;
+    background-color: white;
+    border: none;
+    box-shadow: var(--default-shadow);
+    color: var(--main-color);
+}
+
+.wire-button:hover {
+    background-color: var(--main-color);
+    color: white;
 }
 
 
-/* .button:hover {
-    cursor: pointer;
-    background-color: rgb(173, 17, 48);
-} */
+.button:hover {
+    box-shadow: var(--default-shadow);
+}
 
 .input {
     text-align: start;
-    padding: 0.2rem;
+}
+
+.input input {
+    width: 100%;
+    background: rgb(245, 245, 245);
+    border-radius: var(--default-border-radius);
     border: none;
-    background: none;
-    border-bottom: solid 1px;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 0;
 }
