--- a/Ullet/frontend/src/assets/global.css
+++ b/Ullet/frontend/src/assets/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
 
 body {
     margin: 0;
@@ -24,9 +24,12 @@ body * {
     --text-color: rgb(86, 86, 86);
     --main-color: #1D3F6F;
     --enf-color: #CA2728;
-    --border-color: #D4E8FF;
     --default-radius: 0.3rem;
     --default-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+img {
+    width: 100%;
 }
 
 h1 {
@@ -75,12 +78,9 @@ a {
 }
 
 .card {
-    display: flex;
-
     border-radius: var(--default-radius);
 
     box-shadow: var(--default-shadow);
 
     padding: 2rem;
-    gap: 1rem;
 }
