--- a/Ullet/frontend/src/views/home/Home.css
+++ b/Ullet/frontend/src/views/home/Home.css
@@ -1,43 +1,45 @@
+.headline {
+  grid-column: 1 / span 2;
+}
+
 .main-headline {
-    margin-top: 5rem;
-    font-weight: 700;
+  margin-top: 5rem;
+  font-weight: 700;
 }
 
 .main-headline .title {
-    font-size: 28px;
-    color: var(--main-color);
+  font-size: 28px;
+  color: var(--main-color);
 }
 
 .main-headline .content {
-    font-size: 48px;
-    color: var(--main-color);
+  font-size: 48px;
+  color: var(--main-color);
 }
 
 .supp-headline {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-
-/* .main-headline,
-.supp-headline {
-    max-width: 25rem;
-} */
 
 .header img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .header .grid {
-    grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.illustration {
+  grid-column: span 3;
 }
 
 @media (max-width: 45em) {
-    .header .grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
+  .header .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
-    .header .illustration {
-        grid-row: 1;
-    }
-
+  .header .illustration {
+    grid-row: 1;
+  }
 }
